tests/res/compile_errors/super_outside_child.say
class A {
    fn getX() {
        return super.x; // error: Cannot use 'super' outside of a child class method
    }
}

A();
